# thelab-pre-commit-hooks

./: .cz.toml  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pre-commit-hooks.yml  CHANGELOG.md  LICENSE  README.md  package-lock.json  package.json  setup.cfg
thelab_pre_commit_hooks/: update_copyright_year.py
