[metadata]
name = thelab_pre_commit_hooks
version = 0.0.1
description = Custom pre-commit hooks we use at thelab.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://gitlab.com/thelabnyc/thelab-pre-commit-hooks
author = thelabnyc
author_email = thelabdev@thelab.co
license = ISC
license_files = LICENSE
classifiers =
    License :: OSI Approved :: ISC License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.8

[options.entry_points]
console_scripts =
    update-copyright-year=thelab_pre_commit_hooks.update_copyright_year:main

[bdist_wheel]
universal = True
